--- a/pages/deliveries/index(admin).phtml
+++ b/pages/deliveries/index(admin).phtml
@@ -1,6 +1,9 @@
 <?php Buffer::set('title','deliveries'); ?>
 <h3><a href="/">Home</a></h3>
 <h1>Deliveries <a href="deliveries/add" class="btn-primary">Add delivery</a></h1>
+
+<p>Enter your deliveries in the table below. We will automagically create invoicelines for them. Happy invoicing!</p>
+
 <table class="table responsive-minimal">
   <thead>
     <tr>
