--- a/pages/hours/index(admin).phtml
+++ b/pages/hours/index(admin).phtml
@@ -1,6 +1,8 @@
 <?php Buffer::set('title','Hours'); ?>
 <h3><a href="/">Home</a></h3>
 <h1>Hours <a href="hours/add" class="btn-primary">Add hours</a></h1>
+
+<p>Enter your hours in the table below. We will automagically create invoicelines for them. Happy invoicing!</p>
 <table class="table responsive-minimal" cellpadding="0" cellspacing="0">
   <thead>
     <tr>
