--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Statistics</h1>
 
-<p>You currently receive <?php e(round($subscriptionIncome)); ?> euro per month from <a href="/subscriptions">subscriptions</a>.<br />The <?php e(date('Y')); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k euro and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k euro of uninvoiced work.<br />This creates a total of <?php e(round(($incomeThisYear + $incomeThisYearAddon)/1000,1)); ?>k euro. Last year you received <?php e(round($incomeLastYear/1000,1)); ?>k euro.<p>
+<p>You currently receive &euro; <?php e(round($subscriptionIncome)); ?> per month from <a href="/subscriptions">subscriptions</a>.<br />The <?php e(date('Y')); ?> total of <a href="/invoices">invoices</a> is <?php e(round($incomeThisYear/1000,1)); ?>k euro and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k euro of uninvoiced work. This creates a total of <?php e(round(($incomeThisYear + $incomeThisYearAddon)/1000,1)); ?>k euro. Last year you received <?php e(round($incomeLastYear/1000,1)); ?>k euro.<p>
 
 <br />
 <div>
