--- a/pages/subscriptions/index(admin).phtml
+++ b/pages/subscriptions/index(admin).phtml
@@ -1,6 +1,9 @@
 <?php Buffer::set('title','Subscriptions'); ?>
 <h3><a href="/">Home</a></h3>
 <h1>Subscriptions <a href="subscriptions/add" class="btn-primary">Add subscription</a></h1>
+
+<p>Enter your subcriptions in the table below. We will automagically create invoicelines for them. Happy invoicing!</p>
+
 <table class="table responsive-minimal">
   <thead>
     <tr>
