--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="img/icon-196x196.png">
     <link rel="shortcut icon" sizes="196x196" href="img/icon-196x196.png">
-    <link rel="apple-touch-icon" href="img/homescreenicon.png">
+    <link rel="apple-touch-icon" href="img/icon-196x196.png">
 
     <link href="css/default.css" rel="stylesheet" type="text/css">
   </head>
