--- a/web/css/default.css
+++ b/web/css/default.css
@@ -114,7 +114,8 @@ pre {font-family: 'Roboto', sans-serif;}
 .dot {border-radius: 100%; width: 0px; height: 0px; background: #ddd; display: inline-block; margin-right: 10px; position: relative; bottom: 1px; overflow: hidden; padding: 8px 0 0 8px; font-size: 11px;}
 .money span.dot:before {content: none;}
 .dot.warning {background: #5b4f96;}
-.dot.danger {background: black; animation: blinker 1s linear infinite;}
+.dot.danger {background: red; }
+.dot.danger2 {animation: blinker 1s linear infinite;}
 @keyframes blinker {
     50% {
         background: #fff;
@@ -183,10 +184,9 @@ div + p {padding-top: 15px;}
     .icons > div a .img {position: absolute; width: 25px; height: 25px;}
     .icons > div a .img + .img {width: 25px;}
     .icons > div a span {display: inline-block; padding-left: 45px; font-size: 12px; text-transform: uppercase; letter-spacing: 2px; font-weight: normal;}
-    .icons > div a#branding {display: block; background: #333 url(/img/hero-bg.jpg) center center / auto 160%; margin: 0 0 25px; padding: 0;}
-    .icons > div a#branding > span {padding-left: 0px; display: block; height: 140px; background: #000;}
-    .icons > div a#branding > span > span {padding-left: 0px; display: block; height: 140px; background: rgba(7, 9, 10,0.4) url(/img/invoicelion_reversed.svg) 40px center / auto 63% no-repeat; opacity: 0.5;}
-    .icons > div a#branding:hover > span > span {opacity: 1;}
+    .icons > div a#branding {display: block; margin: 0 0 25px; padding: 0; background: none;}
+    .icons > div a#branding > span {padding-left: 0px; display: block; height: 140px;}
+    .icons > div a#branding > span > span {padding-left: 0px; display: block; height: 140px; background: rgba(7, 9, 10,0) url(/img/invoicelion_reversed.svg) 40px center / auto 63% no-repeat; opacity: 0.5;}
     .onlydesktop, .icons div.bottom {display: block!important;}
     .icons div.bottom {position: absolute; padding-bottom: 35px; padding-top: 25px; bottom: 0; width: 100%;}
     .onlymobile {display: none!important;}
