--- a/web/css/fonts2.css
+++ b/web/css/fonts2.css
@@ -2,23 +2,32 @@
 
 /* chivo-regular - latin */
 @font-face {
-  font-family: 'Chivo';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Chivo Regular'), local('Chivo-Regular'),
-       url('../fonts/chivo-v10-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/chivo-v10-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* chivo-700 - latin */
-@font-face {
-  font-family: 'Chivo';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Chivo Bold'), local('Chivo-Bold'),
-       url('../fonts/chivo-v10-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/chivo-v10-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
+    font-family: 'Chivo';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/chivo-v10-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Chivo Regular'), local('Chivo-Regular'),
+         url('../fonts/chivo-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/chivo-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/chivo-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/chivo-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/chivo-v10-latin-regular.svg#Chivo') format('svg'); /* Legacy iOS */
+  }
+  
+  /* chivo-700 - latin */
+  @font-face {
+    font-family: 'Chivo';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/chivo-v10-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Chivo Bold'), local('Chivo-Bold'),
+         url('../fonts/chivo-v10-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/chivo-v10-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/chivo-v10-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/chivo-v10-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/chivo-v10-latin-700.svg#Chivo') format('svg'); /* Legacy iOS */
+  }
+  
 
 
 /* nunito-sans-300 - latin */
