--- a/web/css/default.css
+++ b/web/css/default.css
@@ -114,13 +114,7 @@ pre {font-family: 'Roboto', sans-serif;}
 .dot {border-radius: 100%; width: 0px; height: 0px; background: #ddd; display: inline-block; margin-right: 10px; position: relative; bottom: 1px; overflow: hidden; padding: 8px 0 0 8px; font-size: 11px;}
 .money span.dot:before {content: none;}
 .dot.warning {background: #5b4f96;}
-.dot.danger {background: red; }
-.dot.danger2 {animation: blinker 1s linear infinite;}
-@keyframes blinker {
-    50% {
-        background: #fff;
-    }
-  }
+.dot.danger {background: #F82C60; }
 .alert.alert-success button, .alert.alert-danger button {color: white;}
 .alert > div {margin: 13px auto 15px; padding: 0 20px;}
 .alert button {opacity: 0.5; cursor: pointer; font-weight: bold; position: absolute; padding: 10px 20px; background: none; border: 0; font-size: 130%; right: 0; top: 0; z-index: 50;}
