--- a/web/css/default.css
+++ b/web/css/default.css
@@ -110,7 +110,7 @@ h1 .btn-primary {font-size: 12px; line-height: 1.5em; margin-top: 5px; float: ri
 pre {font-family: 'Roboto', sans-serif;}
 .alert {position: fixed; left: 0; width: 100%; background: #eee; font-weight: bold; z-index: 999;animation-name: slideOutTop; animation-duration: 3s; bottom: 100vh;}
 .alert.alert-success {background: #5b4f96; color: white;}
-.alert.alert-danger {background: #5b4f96; color: white!important;}
+.alert.alert-danger {background: #F82C60; color: white!important;}
 .dot {border-radius: 100%; width: 0px; height: 0px; background: #ddd; display: inline-block; margin-right: 10px; position: relative; bottom: 1px; overflow: hidden; padding: 8px 0 0 8px; font-size: 11px;}
 .money span.dot:before {content: none;}
 .dot.warning {background: #5b4f96;}
@@ -180,7 +180,7 @@ div + p {padding-top: 15px;}
     .icons > div a .img + .img {width: 25px;}
     .icons > div a span {display: inline-block; padding-left: 45px; font-size: 12px; text-transform: uppercase; letter-spacing: 2px; font-weight: normal;}
     .icons > div a#branding {display: block; margin: 0 0 25px; padding: 0; background: none;}
-    .icons > div a#branding > span {padding-left: 0px; display: block; height: 160px; background: rgba(7, 9, 10,0) url(/img/invoicelionlogo.svg) 55px 125px / 55% auto no-repeat; opacity:0.5;}
+    .icons > div a#branding > span {padding-left: 0px; display: block; height: 160px; background: rgba(7, 9, 10,0) url(/img/invoicelionlogo.svg) 55px 125px / 55% auto no-repeat; opacity:1;}
     .icons > div a#branding > span > span {padding-left: 0px; display: block; height: 160px; background: rgba(7, 9, 10,0) url(/img/invoicelion_reversed.svg) 45% 30px / auto 53% no-repeat; opacity:1;}
     .onlydesktop, .icons div.bottom {display: block!important;}
     .icons div.bottom {position: absolute; padding-bottom: 35px; padding-top: 25px; bottom: 0; width: 100%;}
