--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -9,13 +9,13 @@
 
         <div class="col50">  
             <h2>Action required</h2>
-            <?php if(!isset($erronous_subscriptions) && 
-                !isset($uninvoiced_deliveries) &&
-                !isset($uninvoiced_subscriptions) &&
-                !isset($uninvoiced_hours) &&
-                !isset($unsent_reminders2) &&
-                !isset($unsent_reminders) &&
-                !isset($unsent_invoices)) {?>
+            <?php if(!isset($erronous_subscriptions[0]) && 
+                !isset($uninvoiced_deliveries[0]) &&
+                !isset($uninvoiced_subscriptions[0]) &&
+                !isset($uninvoiced_hours[0]) &&
+                !isset($unsent_reminders2[0]) &&
+                !isset($unsent_reminders[0]) &&
+                !isset($unsent_invoices[0])) {?>
                 <p class="lead">Well done! You have no items that require an action.</p>
             <?php }  else { ?>
             <table>
