--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -16,7 +16,7 @@
                 !isset($unsent_reminders2[0]) &&
                 !isset($unsent_reminders[0]) &&
                 !isset($unsent_invoices[0])) {?>
-                <p class="lead">Well done! You have no items that require an action.</p>
+                <p class="lead">Well done! There are no items here.</p>
             <?php }  else { ?>
             <table>
                 <?php if(isset($erronous_subscriptions)) {
