--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -30,7 +30,7 @@
 
       <div class="icons">
         <div>
-          <a href="/" id="branding" title="InvoiceLion"><span><span></span></span></a>
+          <a href="/" id="branding" title="InvoiceLion"></a>
           <a href="/" <?php if(strlen(Router::getRequest())<3) e('class=active'); ?> title="Dashboard">
             <div class="img" style="background-image: url(/img/icon.svg);"></div>
             <div class="img" style="background-image: url(/img/icon-white.svg);"></div>
