--- a/web/css/default.css
+++ b/web/css/default.css
@@ -138,8 +138,8 @@ pre {font-family: 'Roboto', sans-serif;}
 .default .content {padding-top: 5px!important; width:100%; max-width: 100%; left: 0;}
 .default .main > div.content {padding-left: 0; padding-right: 0;}
 .default .content::before {content: ""; position: absolute; z-index: 0; left: 0; width: 100%; top: 0; background: #121619;; height: 200px;}
-.default .content a#branding {color: white; position: relative; width: 80px; display: block; margin: 10px auto 20px; opacity: 0.4; text-align: center; text-decoration: none; font-weight: bold;}
-.default .content a#branding img {width: 100%;}
+.default .content a#branding {color: white; position: relative; width: 245px; padding: 0px 25px; display: block; margin: 15px auto 20px; opacity: 1; text-align: center; text-decoration: none; font-weight: bold;}
+.default .content a#branding img {height: 50px;}
 body.default {background: #eee;}
 
 
@@ -179,9 +179,7 @@ div + p {padding-top: 15px;}
     .icons > div a .img {position: absolute; width: 25px; height: 25px;}
     .icons > div a .img + .img {width: 25px;}
     .icons > div a span {display: inline-block; padding-left: 45px; font-size: 12px; text-transform: uppercase; letter-spacing: 2px; font-weight: normal;}
-    .icons > div a#branding {display: block; margin: 0 0 25px; padding: 0; background: none;}
-    .icons > div a#branding > span {padding-left: 0px; display: block; height: 160px; background: rgba(7, 9, 10,0) url(/img/invoicelionlogo.svg) 55px 125px / 55% auto no-repeat; opacity:1;}
-    .icons > div a#branding > span > span {padding-left: 0px; display: block; height: 160px; background: rgba(7, 9, 10,0) url(/img/invoicelion_reversed.svg) 45% 30px / auto 53% no-repeat; opacity:1;}
+    .icons > div a#branding {display: block; margin: 0 0 25px; padding: 0; background: transparent url(/img/invoicelionlogo_square.svg) 59px 32px / 52% auto no-repeat; height: 160px;}
     .onlydesktop, .icons div.bottom {display: block!important;}
     .icons div.bottom {position: absolute; padding-bottom: 35px; padding-top: 25px; bottom: 0; width: 100%;}
     .onlymobile {display: none!important;}
@@ -222,10 +220,10 @@ input[type="checkbox"] {height: auto; width: auto; max-width: none;}
 th[order] {cursor: pointer;}
 .tag {text-decoration: none; margin-top: 5px; border: 1px solid #ccc; border-radius: 3px; display: inline-block; padding: 2px 7px; font-size: 85%; margin-right: 2px;}
 input[type="file"] { border:0; padding:0;}
-.form-group.has-error, .form-group.has-error a {color: red!important;}
+.form-group.has-error, .form-group.has-error a {color: #F82C60!important;}
 .form-group.has-error input,
 .form-group.has-error select,
-.form-group.has-error textarea {border: 1px solid red;}
+.form-group.has-error textarea {border: 1px solid #F82C60;}
 
 
 
