--- a/web/css/fonts.css
+++ b/web/css/fonts.css
@@ -1,70 +1,102 @@
 
-  /* roboto-300 - latin */
-  @font-face {
-    font-family: 'Roboto';
+
+/* chivo-regular - latin */
+@font-face {
+    font-family: 'Chivo';
     font-style: normal;
-    font-weight: 300;
-    src: local('Roboto Light'), local('Roboto-Light'),
-         url('/fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/roboto-v18-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-weight: 400;
+    src: url('../fonts/chivo-v10-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Chivo Regular'), local('Chivo-Regular'),
+         url('../fonts/chivo-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/chivo-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/chivo-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/chivo-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/chivo-v10-latin-regular.svg#Chivo') format('svg'); /* Legacy iOS */
   }
   
-  /* roboto-300italic - latin */
+  /* chivo-700 - latin */
   @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 300;
-    src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
-         url('/fonts/roboto-v18-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/roboto-v18-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-
-  /* roboto-regular - latin */
-  @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: url('/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local('Roboto'), local('Roboto-Regular'),
-        url('/fonts/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('/fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-        url('/fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-        url('/fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-        url('/fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-  }
-
-  /* roboto-italic - latin */
-  @font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 400;
-    src: url('/fonts/roboto-v18-latin-italic.eot'); /* IE9 Compat Modes */
-    src: local('Roboto Italic'), local('Roboto-Italic'),
-        url('/fonts/roboto-v18-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('/fonts/roboto-v18-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-        url('/fonts/roboto-v18-latin-italic.woff') format('woff'), /* Modern Browsers */
-        url('/fonts/roboto-v18-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-        url('/fonts/roboto-v18-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
-  }
-
-  /* roboto-700 - latin */
-  @font-face {
-    font-family: 'Roboto';
+    font-family: 'Chivo';
     font-style: normal;
     font-weight: 700;
-    src: local('Roboto Bold'), local('Roboto-Bold'),
-         url('/fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/roboto-v18-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    src: url('../fonts/chivo-v10-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Chivo Bold'), local('Chivo-Bold'),
+         url('../fonts/chivo-v10-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/chivo-v10-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/chivo-v10-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/chivo-v10-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/chivo-v10-latin-700.svg#Chivo') format('svg'); /* Legacy iOS */
   }
   
 
-  
-  /* roboto-900 - latin */
-  @font-face {
-    font-family: 'Roboto';
+
+/* nunito-sans-300 - latin */
+@font-face {
+    font-family: 'Nunito Sans';
     font-style: normal;
-    font-weight: 900;
-    src: local('Roboto Black'), local('Roboto-Black'),
-         url('/fonts/roboto-v18-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/roboto-v18-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-weight: 300;
+    src: url('../fonts/nunito-sans-v4-latin-300.eot'); /* IE9 Compat Modes */
+    src: local('Nunito Sans Light'), local('NunitoSans-Light'),
+         url('../fonts/nunito-sans-v4-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/nunito-sans-v4-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/nunito-sans-v4-latin-300.svg#NunitoSans') format('svg'); /* Legacy iOS */
   }
+  
+  /* nunito-sans-300italic - latin */
+  @font-face {
+    font-family: 'Nunito Sans';
+    font-style: italic;
+    font-weight: 300;
+    src: url('../fonts/nunito-sans-v4-latin-300italic.eot'); /* IE9 Compat Modes */
+    src: local('Nunito Sans Light Italic'), local('NunitoSans-LightItalic'),
+         url('../fonts/nunito-sans-v4-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/nunito-sans-v4-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-300italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/nunito-sans-v4-latin-300italic.svg#NunitoSans') format('svg'); /* Legacy iOS */
+  }
+  
+  /* nunito-sans-italic - latin */
+  @font-face {
+    font-family: 'Nunito Sans';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/nunito-sans-v4-latin-italic.eot'); /* IE9 Compat Modes */
+    src: local('Nunito Sans Italic'), local('NunitoSans-Italic'),
+         url('../fonts/nunito-sans-v4-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/nunito-sans-v4-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/nunito-sans-v4-latin-italic.svg#NunitoSans') format('svg'); /* Legacy iOS */
+  }
+  
+  /* nunito-sans-regular - latin */
+  @font-face {
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/nunito-sans-v4-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Nunito Sans Regular'), local('NunitoSans-Regular'),
+         url('../fonts/nunito-sans-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/nunito-sans-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/nunito-sans-v4-latin-regular.svg#NunitoSans') format('svg'); /* Legacy iOS */
+  }
+  
+  /* nunito-sans-700 - latin */
+  @font-face {
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/nunito-sans-v4-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Nunito Sans Bold'), local('NunitoSans-Bold'),
+         url('../fonts/nunito-sans-v4-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/nunito-sans-v4-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/nunito-sans-v4-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/nunito-sans-v4-latin-700.svg#NunitoSans') format('svg'); /* Legacy iOS */
+  }
+  
