--- a/web/css/default.css
+++ b/web/css/default.css
@@ -115,7 +115,7 @@ pre {font-family: 'Roboto', sans-serif;}
 .money span.dot:before {content: none;}
 .dot.warning {background: #5b4f96; color: white;}
 .dot.danger {background: #F82C60; color: white;}
-.dot.text {height: auto; padding: 3px 0; border-radius: 3px; width: auto; vertical-align: middle; line-height: 1em; text-align: center; width: 48px;}
+.dot.text {height: auto; padding: 3px 0; border-radius: 3px; width: auto; vertical-align: middle; line-height: 1em; text-align: center; width: 48px; font-weight: 700;}
 .alert.alert-success button, .alert.alert-danger button {color: white;}
 .alert > div {margin: 13px auto 15px; padding: 0 20px;}
 .alert button {opacity: 0.5; cursor: pointer; font-weight: bold; position: absolute; padding: 10px 20px; background: none; border: 0; font-size: 130%; right: 0; top: 0; z-index: 50;}
